[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/generic portrait.png" type="Texture" id=1]
[ext_resource path="res://menus/party_menu/open_character_menu_button_resource.gd" type="Script" id=2]
[ext_resource path="res://assets/menus/draft button join.png" type="Texture" id=3]
[ext_resource path="res://assets/menus/draft button join on hover.png" type="Texture" id=4]

[node name="open_character_menu_button_resource" type="Control"]
anchor_right = 0.068
anchor_bottom = 0.133
margin_right = -114.24
margin_bottom = -119.7
rect_min_size = Vector2( 115, 120 )
script = ExtResource( 2 )

[node name="open_character_menu_button" type="TextureButton" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -115.0
margin_bottom = -120.0
rect_min_size = Vector2( 115, 120 )
hint_tooltip = "Open the character menu."
texture_normal = ExtResource( 1 )
expand = true

[node name="BUG_DONT_REMOVE_ME" type="Button" parent="."]
visible = false
anchor_left = 0.5
anchor_top = -0.333333
anchor_right = 0.5
anchor_bottom = -0.333333
margin_left = -45.5
margin_right = 45.5
margin_bottom = 33.0
text = "Pick me"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="draft_me_button2" type="TextureButton" parent="."]
anchor_top = 0.658333
anchor_right = 1.0
anchor_bottom = 1.0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": true
}

[connection signal="pressed" from="open_character_menu_button" to="." method="_on_open_character_menu_button_pressed"]
[connection signal="pressed" from="BUG_DONT_REMOVE_ME" to="." method="_on_draft_me_button_pressed"]
[connection signal="pressed" from="draft_me_button2" to="." method="_on_draft_me_button_pressed"]
